misc spacing fixes in community creation, right align feedback text

--- a/packages/commonwealth/client/styles/components/component_kit/cw_text_input.scss
+++ b/packages/commonwealth/client/styles/components/component_kit/cw_text_input.scss
@@ -16,6 +16,7 @@
   .feedback-message-text.Text {
     justify-content: flex-end;
     margin-bottom: 4px;
+    text-align: right;
 
     &.success {
       color: $green-600;
