--- a/packages/commonwealth/client/styles/pages/manage_community/chain_metadata_rows.scss
+++ b/packages/commonwealth/client/styles/pages/manage_community/chain_metadata_rows.scss
@@ -15,15 +15,10 @@
     }
   }
 
-  .chain-metadata-quill-editor {
-    margin-bottom: 24px;
-  }
-
   .AvatarUploadRow,
   .ToggleRow {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
 
     .toggle-and-label {
       display: flex;
@@ -34,7 +29,6 @@
   .tag-row {
     display: flex;
     flex-direction: column;
-    margin-bottom: 24px;
 
     .tag-group {
       display: flex;
